facet-args/tests/snapshots/err__error_char_with_multiple_chars.snap
---
source: tests/err.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
  × Could not parse CLI arguments
   ╭────
 1 │ --letter abc 
   ·          ─┬─
   ·           ╰── reflection error: Operation failed on shape char: Failed to parse string value
   ╰────
